--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <a class="dossier-tile" href="daniel-armet.html">
     <div class="thumb"><img src="assets/portrait1.jpg" alt="Daniel Armet"></div>
     <div class="meta">
-      <div class="name">DANIEL ARMET</div>
+      <div class="name">ДАНИЭЛЬ АРМЕТ</div>
       <div class="role mono">TECH / AGENT METACORP</div>
       <div class="tags">
         <span class="pill warn">ACTIVE</span>
@@ -54,7 +54,7 @@
   <a class="dossier-tile" href="ellis.html">
     <div class="thumb"><img src="assets/portrait.jpg" alt="Ellis Veil"></div>
     <div class="meta">
-      <div class="name">ELLIS VEIL</div>
+      <div class="name">ЭЛЛИС ВЕЙЛ</div>
       <div class="role mono">FIELD MED</div>
       <div class="tags">
         <span class="pill">ARCHIVED</span>
@@ -65,7 +65,7 @@
   <a class="dossier-tile" href="nico-vasquez.html">
     <div class="thumb"><img src="assets/nico.jpg" alt="Nico Vasquez"></div>
     <div class="meta">
-      <div class="name">NICO VASQUEZ</div>
+      <div class="name">НИКО ВАСКЕЗ</div>
       <div class="role mono">TECH</div>
       <div class="tags">
         <span class="pill">ACTIVE</span>
@@ -76,7 +76,7 @@
   <a class="dossier-tile" href="iren.html">
     <div class="thumb"><img src="assets/iren.jpg" alt="Iren"></div>
     <div class="meta">
-      <div class="name">IREN</div>
+      <div class="name">ИРЕН ВИАРДО</div>
       <div class="role mono">NETRUNNER</div>
       <div class="tags">
         <span class="pill">NETRUNNER</span>
