--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -67,7 +67,7 @@
         <div class="card__title">СУБЪЕКТ</div>
 
         <div class="photo">
-          <img src="../assets/portrait-placeholder.jpg" alt="Daniel Armet — archival image">
+          <img src="../assets/daniel.jpg" alt="Daniel Armet — archival image">
           <div class="photo__cap">FACE OBSCURED // ARCHIVAL</div>
         </div>
 
