--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     <div class="thumb"><img src="assets/portrait.jpg" alt="Ellis Veil"></div>
     <div class="meta">
       <div class="name">ЭЛЛИС ВЕЙЛ</div>
-      <div class="role mono">FIELD MED</div>
+      <div class="role mono">ПОЛЕВОЙ МЕДИК</div>
       <div class="tags">
         <span class="pill">ARCHIVED</span>
+        <span class="pill warn">MIA</span>
       </div>
     </div>
   </a>
@@ -66,9 +67,10 @@
     <div class="thumb"><img src="assets/nico.jpg" alt="Nico Vasquez"></div>
     <div class="meta">
       <div class="name">НИКО ВАСКЕЗ</div>
-      <div class="role mono">TECH</div>
+      <div class="role mono">РОКЕРБОЙ / ВЛАДЕЛЕЦ БАРА</div>
       <div class="tags">
         <span class="pill">ACTIVE</span>
+        <span class="pill">MONITORING</span>
       </div>
     </div>
   </a>
@@ -77,9 +79,10 @@
     <div class="thumb"><img src="assets/iren.jpg" alt="Iren"></div>
     <div class="meta">
       <div class="name">ИРЕН ВИАРДО</div>
-      <div class="role mono">NETRUNNER</div>
+      <div class="role mono">НЕТРАННЕР</div>
       <div class="tags">
-        <span class="pill">NETRUNNER</span>
+        <span class="pill">ACTIVE</span>
+        <span class="pill warn">CYBER-PLAGUE</span>
       </div>
     </div>
   </a>
