--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="thumb"><img src="assets/portrait1.jpg" alt="Daniel Armet"></div>
     <div class="meta">
       <div class="name">ДАНИЭЛЬ АРМЕТ</div>
-      <div class="role mono">TECH / AGENT METACORP</div>
+      <div class="role mono">ТЕХНИК / АГЕНТ МЕТАКОРП</div>
       <div class="tags">
         <span class="pill warn">ACTIVE</span>
         <span class="pill warn">RESTRICTED</span>
