--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -64,72 +64,53 @@ body{
         <div class="card__title">СУБЪЕКТ</div>
 
         <div class="photo">
-          <img src="../assets/portrait-placeholder.jpg" alt="Daniel Armet — archival image">
+          <img src="assets/nico.jpg" alt="Nico Vazquez - cybbergram source">
           <div class="photo__cap">FACE OBSCURED // ARCHIVAL</div>
         </div>
 
         <ul class="kvlist">
-          <li><span>Имя</span><b>Даниэль Армет</b></li>
-          <li><span>Роль</span><b>Техник / Агент Metacorp</b></li>
-          <li><span>Номад-ранг</span><b class="warn">ВЫСОКИЙ</b></li>
+          <li><span>Имя</span><b>Нико Васкез</b></li>
+          <li><span>Роль</span><b>Рокербой / Кочевник</b></li>
+          <li><span>Статус влияния</span><b class="warn">ВЫСОКИЙ</b></li>
           <li><span>Происхождение</span><b class="redact is-static">████████</b></li>
           <li><span>Статус</span><b>ACTIVE</b></li>
         </ul>
 
         <div class="tags">
-          <span class="tag">TECH</span>
-          <span class="tag">AGENT</span>
+          <span class="tag">STREAMER</span>
+          <span class="tag">MUSCIAN</span>
           <span class="tag">NOMAD-AFFILIATED</span>
-          <span class="tag">CLONE</span>
+          <span class="tag">NEON_WIND</span>
         </div>
 
         <div class="micro mono">
-          Identity acknowledged by subject.<br>
-          Full origin chain: unavailable.
+            Public identity confirmed.<br>
+            Influence exceeds operational footprint.
         </div>
       </section>
     </aside>
-
-    <section class="main">
-      <section class="card" id="objective">
-        <div class="card__title">ИНФОРМАЦИЯ</div>
-
-        <p>
-          Субъект является
-          искусственно выращенным клоном,
-          созданным в рамках неизвестной программы.<br>
-          Данные предположения официально не подтверждены.
-          Исходная документация отсутствует.
-        </p>
-
-        <p>
-          Предыстория до активации: <span class="redact is-static">НЕДОСТУПНО</span>.
-          Возраст актива: <b>~6 лет</b>.
-        </p>
-
-      </section>
 
       <section class="card" id="origin">
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
   <p>
-    Субъект с высокой вероятностью является
-    искусственно выращенным клоном,
-    созданным в рамках неизвестной программы
-    с чётко заданной операционной целью.
-  </p>
+  Субъект имеет подтверждённое натуральное происхождение.
+  Точная дата рождения не установлена.
+  Предполагаемый возраст — <b>около 20 лет</b>.
+</p>
 
-  <p class="muted">
-    Первоначально предполагалось, что субъект предназначен
-    для <span class="warn"><s>краткосрочной эксплуатации</s></span>
-    <span class="warn"><s>утилизации после выполнения задачи</s></span>
-    ограниченного цикла активного применения.
-  </p>
+<p>
+  Ранее аффилирован с кочевническими формированиями.
+  Покинул пустоши и семью,
+  после чего закрепился в городской среде
+  как независимый рокербой и публичная фигура.
+</p>
 
-  <p class="muted">
-    Данные предположения официально не подтверждены.
-    Исходная документация отсутствует.
-  </p>
+<p class="muted">
+  Подробности раннего периода жизни
+  и причины разрыва с кочевнической средой
+  <span class="redact is-static">НЕДОСТУПНЫ</span>.
+</p>
 </section>
 
       <section class="card" id="family">
