--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -185,6 +185,44 @@
         </p>
       </section>
 
+      <section class="card" id="current">
+  <div class="card__title">АКТУАЛЬНЫЙ СТАТУС / ТЕКУЩАЯ АКТИВНОСТЬ</div>
+
+  <p>
+    В ходе последних операций субъект демонстрирует
+    устойчивый сдвиг от исключительно рациональной модели поведения
+    к формированию эмпатических и социально-ориентированных связей.
+  </p>
+
+  <p class="muted">
+    Ранее доминировавшая склонность к анализу и рационализации
+    заменяется способностью учитывать эмоциональные факторы
+    и долгосрочные межличностные последствия решений.
+  </p>
+
+  <p>
+    В настоящее время субъект задействован в охране
+    и обеспечении безопасности подземного объекта,
+    расположенного под гражданским заведением
+    <span class="redact is-static">[ДАННЫЕ ОГРАНИЧЕНЫ]</span>.
+  </p>
+
+  <p class="muted">
+    Объект используется для содержания и защиты
+    активов Metacorp, включая высокоценные биологические образцы
+    (классификация: <b>SKINNERS</b>).
+  </p>
+
+  <p>
+    Дополнительно субъект оказывает услуги эскорта
+    совместно с персональным AV-транспортом.
+    В боевых и кризисных ситуациях демонстрирует
+    высокий уровень тактического мышления,
+    дисциплины и понимания поставленных задач.
+  </p>
+</section>
+
+      
       <section class="card" id="notes">
         <div class="card__title">ПОЛЕВЫЕ ЗАМЕТКИ</div>
         <ul class="list">
