--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -138,7 +138,7 @@
     Известно минимум о двух субъектках женского пола
     Статус: принадлежность к группе
     <b>ИНКВИЗИТОРОВ</b>
-    — <b>ПОДТВЕРЖДЕНА</b>.<br>
+    - <b>ПОДТВЕРЖДЕНА</b>.<br>
     Степень автономии и местоположение неизвестны.
   </p>
 
@@ -209,8 +209,7 @@
 
   <p class="muted">
     Объект используется для содержания и защиты
-    активов Metacorp, включая высокоценные биологические образцы
-    (классификация: <b>SKINNERS</b>).
+    активов Metacorp, включая высокоценные <span class="redact is-static">НЕДОСТУПНО</span>.
   </p>
 
   <p>
@@ -224,11 +223,31 @@
 
       
       <section class="card" id="notes">
-        <div class="card__title">ПОЛЕВЫЕ ЗАМЕТКИ</div>
+        <div class="card__title">ИНЦИДЕНТ</div>
         <ul class="list">
-          <li>Друзей заводит легко, внимателен к людям.</li>
-          <li>Иногда не считывает «человеческие» социальные правила и говорит слишком прямо.</li>
-          <li>Много моделей поведения выучено по медиа/брейндансам.</li>
+          <li>
+  Зафиксирован несанкционированный контакт
+  с родственным субъектом из инквизиции
+  во время проведения публичного мероприятия (концерт).
+</li>
+
+<li>
+  Контакт инициирован субъектом сознательно.
+  Цель взаимодействия - налаживание отношений.
+</li>
+
+<li class="muted">
+  Анализ поведения указывает на попытку
+  демонстрации альтернативной среды
+  и модели существования вне корпоративных
+  и привычных субъекту <span class="pill">SIBLING SUBJECTS</span> структур.
+</li>
+
+<li>
+  Эскалация конфликта не зафиксирована.
+  Положительный результат отсутствует.
+</li>
+
         </ul>
       </section>
     </section>
