--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -120,6 +120,41 @@
     Данные официально не подтверждены.
     Исходная документация отсутствует.
   </p>
+
+<p>
+  В период первичной подготовки
+  субъект подвергался ускоренному обучению
+  посредством серийных бренданс-сессий.
+</p>
+
+<p class="muted">
+  Используемые материалы включали
+  боевые, тактические и поведенческие модели.
+  Обучение проводилось без учёта
+  допустимых психоэмоциональных нагрузок.
+</p>
+
+<p>
+  В результате зафиксирована
+  устойчивая психологическая травма,
+  напрямую связанная с брендансами
+  и принудительной нейростимуляцией.
+</p>
+
+<p class="warn">
+  Триггер:
+  неконтролируемый просмотр,
+  насильственная нейроинтеграция,
+  утрата автономии восприятия.
+</p>
+
+<p class="muted">
+  Субъект допускает взаимодействие
+  с брендансами исключительно
+  при наличии личного контроля
+  над источником и контентом.
+</p>
+        
 </section>
 
       <section class="card" id="family">
@@ -172,7 +207,7 @@
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
         <ul class="kvlist">
-          <li><span>Нейропрофиль</span><b class="warn">Высокая аффективная отзывчивост</b></li>
+          <li><span>Нейропрофиль</span><b class="warn">Высокая аффективная отзывчивость</b></li>
           <li><span>Псих. модель</span><b>Эмпатия сохранена</b></li>
           <li><span>Соц. адаптация</span><b>ФУНКЦИОНАЛЬНА</b></li>
           <li><span>Коммуникация</span><b>ПРЯМОЛИНЕЙНАЯ</b></li>
@@ -188,6 +223,13 @@
       <section class="card" id="current">
   <div class="card__title">АКТУАЛЬНЫЙ СТАТУС / ТЕКУЩАЯ АКТИВНОСТЬ</div>
 
+<p>
+  Субъект владеет и управляет
+  небольшим торговым объектом,
+  специализирующимся на распространении
+  брендансов и архивных видеоматериалов.
+</p>
+        
   <p>
     В ходе последних операций субъект демонстрирует
     устойчивый сдвиг от исключительно рациональной модели поведения
