--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -262,11 +262,10 @@
     дисциплины и понимания поставленных задач.
   </p>
 </section>
-
       
-      <section class="card" id="notes">
+      <section class="card" id="incident">
         <div class="card__title">ИНЦИДЕНТ</div>
-        <ul class="list">
+        <ul class="card__title">
           <li>
   Зафиксирован несанкционированный контакт
   с родственным субъектом из инквизиции
