--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -134,26 +134,27 @@
   допустимых психоэмоциональных нагрузок.
 </p>
 
-<p>
-  В результате зафиксирована
-  устойчивая психологическая травма,
-  напрямую связанная с брендансами
-  и принудительной нейростимуляцией.
-</p>
-
-<p class="warn">
-  Триггер:
-  неконтролируемый просмотр,
-  насильственная нейроинтеграция,
-  утрата автономии восприятия.
-</p>
-
 <p class="muted">
   Субъект допускает взаимодействие
   с брендансами исключительно
   при наличии личного контроля
   над источником и контентом.
 </p>
+
+        <div class="note">
+          <div class="note__title mono">ПРИМЕЧАНИЕ</div>
+          <div class="note__body">
+            В результате зафиксирована
+  устойчивая психологическая травма,
+  напрямую связанная с брендансами
+  и принудительной нейростимуляцией.<br>
+            Триггер:
+  неконтролируемый просмотр,
+  насильственная нейроинтеграция,
+  утрата автономии восприятия.
+          </div>
+        </div>
+      </section>
         
 </section>
 
