--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="brand__sub">INTERNAL USE ONLY // CLASSIFIED</div>
       <div class="brand__meta mono">NODE: MC-TERM-01 // LAST SYNC: 2078-??-??</div>
     </div>
+<div class="session mono">
+  CONNECTED AS: <span class="warn">SYBBAN</span>
+</div>
 
     <nav class="quick">
       <a href="#dossiers" class="q">DOSSIERS</a>
