--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -266,7 +266,7 @@
       
       <section class="card" id="incident">
         <div class="card__title">ИНЦИДЕНТ</div>
-        <ul class="card__title">
+        <ul class="list">
           <li>
   Зафиксирован несанкционированный контакт
   с родственным субъектом из инквизиции
