--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <div class="brand__meta mono">NODE: MC-TERM-01 // LAST SYNC: 2078-??-??</div>
     </div>
 
+    <div class="connected-as">
+  CONNECTED AS: <span>SYBBAN</span>
+</div>
+
+    
     <nav class="quick">
       <a href="#dossiers" class="q">DOSSIERS</a>
       <a href="archive.html" class="q">ARCHIVE</a>
