--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   </a>
 
   <a class="dossier-tile" href="iren.html">
+    <div class="card cyber-plague">
     <div class="thumb"><img src="assets/iren.jpg" alt="Iren"></div>
     <div class="meta">
       <div class="name">ИРЕН ВИАРДО</div>
