--- a/index.html
+++ b/index.html
@@ -80,18 +80,24 @@
     </div>
   </a>
 
-  <a class="dossier-tile" href="iren.html">
-    <div class="card cyber-plague">
-    <div class="thumb"><img src="assets/iren.jpg" alt="Iren"></div>
+<a class="dossier-tile" href="iren.html">
+  <div class="card cyber-plague">
+    <div class="thumb">
+      <img src="assets/iren.jpg" alt="Iren">
+    </div>
+
     <div class="meta">
       <div class="name">ИРЕН ВИАРДО</div>
       <div class="role mono">НЕТРАННЕР</div>
+
       <div class="tags">
         <span class="pill">ACTIVE</span>
         <span class="pill warn">CYBER-PLAGUE</span>
       </div>
     </div>
-  </a>
+  </div>
+</a>
+
 
 </div>
 
