--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </a>
 
-<a class="dossier-tile" href="iren.html">
+<a class="dossier-tile cyber-plague" href="iren.html">
     <div class="thumb">
       <img src="assets/iren.jpg" alt="Iren">
     </div>
