--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </div>
 
     <div class="meta">
-      <div class="name">ИРЕН ВИАРДО</div>
-      <div class="role mono">НЕТРАННЕР</div>
+      <div class="name glitch-text">ИРЕН ВИАРДО</div>
+      <div class="role mono glitch-text">НЕТРАННЕР</div>
 
       <div class="tags">
         <span class="pill">ACTIVE</span>
