--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="tags">
         <span class="pill">ACTIVE</span>
-        <span class="pill warn">CYBER-PLAGUE</span>
+        <span class="pill warn plague-swap" data-hover="we will not forgive">CYBER-PLAGUE</span>
       </div>
   </div>
 </a>
