--- a/iren.html
+++ b/iren.html
@@ -65,20 +65,20 @@ body{
         <div class="card__title">СУБЪЕКТ</div>
 
         <div class="photo">
-          <img src="../assets/portrait-placeholder.jpg" alt="Daniel Armet — archival image">
-          <div class="photo__cap">FACE OBSCURED // ARCHIVAL</div>
+          <img src="/assets/iren.jpg" alt="Iren - from datapool">
+          <div class="photo__cap"></div>
         </div>
 
         <ul class="kvlist">
-          <li><span>Имя</span><b>Даниэль Армет</b></li>
-          <li><span>Роль</span><b>Техник / Агент Metacorp</b></li>
-          <li><span>Номад-ранг</span><b class="warn">ВЫСОКИЙ</b></li>
-          <li><span>Происхождение</span><b class="redact is-static">████████</b></li>
+          <li><span>Имя</span><b>Ирен Виардо</b></li>
+          <li><span>Роль</span><b>Нетраннер</b></li>
+          <li><span>Ранг в сети</span><b class="warn">8</b></li>
+          <li><span>Происхождение</span><b>Франция</b></li>
           <li><span>Статус</span><b>ACTIVE</b></li>
         </ul>
 
         <div class="tags">
-          <span class="tag">TECH</span>
+          <span class="tag">NET</span>
           <span class="tag">AGENT</span>
           <span class="tag">NOMAD-AFFILIATED</span>
           <span class="tag">CLONE</span>
