--- a/iren.html
+++ b/iren.html
@@ -43,10 +43,10 @@ body{
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="brand__title">METACORP // INTERNAL DOSSIER</div>
-      <div class="brand__sub">INTERNAL USE ONLY // CLASSIFIED</div>
+      <div class="brand__title">DGSI // DOSSIER INTERNE</div>
+      <div class="brand__sub">ACCÈS RESTREINT // CLASSIFIÉ</div>
       <div class="brand__meta mono">
-        DOSSIER REV: 0.1 // SUBJECT: DANIEL ARMET // STATUS: ACTIVE
+        RÉVISION DOSSIER : 0.1 // SUJET : IREN VIARDO // STATUT : ACTIF
       </div>
     </div>
 
@@ -65,7 +65,7 @@ body{
         <div class="card__title">СУБЪЕКТ</div>
 
         <div class="photo">
-          <img src="/assets/iren.jpg" alt="Iren - from datapool">
+          <img src="assets/iren.jpg" alt="Iren - from datapool">
           <div class="photo__cap">SOURCE : ARCHIVES DE LA SÉCURITÉ INTÉRIEURE</div>
         </div>
 
