--- a/iren.html
+++ b/iren.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>METACORP // DOSSIER: DANIEL ARMET</title>
+  <title>DGSI // DOSSIER INTERNE</title>
 
   <link rel="stylesheet" href="styles.css">
 
@@ -29,7 +29,7 @@
 }
 
     
-body{
+{
   background:
     radial-gradient(900px 600px at 60% 10%, rgba(77,255,156,.16), transparent 60%),
     radial-gradient(900px 600px at 20% 40%, rgba(54,217,127,.12), transparent 60%),
@@ -40,12 +40,12 @@ body{
   </style>
 </head>
   
-<body>
+<body class="cyber-plague">
   <header class="topbar">
     <div class="brand">
-      <div class="brand__title">DGSI // DOSSIER INTERNE</div>
-      <div class="brand__sub">ACCÈS RESTREINT // CLASSIFIÉ</div>
-      <div class="brand__meta mono">
+      <div class="brand__title glitch-text">DGSI // DOSSIER INTERNE</div>
+      <div class="brand__sub glitch-text">ACCÈS RESTREINT // CLASSIFIÉ</div>
+      <div class="brand__meta mono glitch-text">
         RÉVISION DOSSIER : 0.1 // SUJET : IREN VIARDO // STATUT : ACTIF
       </div>
     </div>
@@ -209,5 +209,5 @@ body{
   </main>
 
   <script src="script.js"></script>
-</body>
+</>
 </html>
