--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>METACORP // DOSSIER: DANIEL ARMET</title>
+  <title>CYBERGRAMM // MEDIA PROFILE</title>
 
   <link rel="stylesheet" href="styles.css">
 
@@ -42,10 +42,10 @@ body{
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="brand__title">METACORP // INTERNAL DOSSIER</div>
-      <div class="brand__sub">INTERNAL USE ONLY // CLASSIFIED</div>
+      <div class="brand__title">CYBERGRAMM // MEDIA PROFILE</div>
+      <div class="brand__sub">PUBLIC PRESENCE // MONITORED</div>
       <div class="brand__meta mono">
-        DOSSIER REV: 0.1 // SUBJECT: DANIEL ARMET // STATUS: ACTIVE
+        PROFILE REV: 1.4 // SUBJECT: NICO VASQUEZ // STATUS: ACTIVE
       </div>
     </div>
 
@@ -65,7 +65,7 @@ body{
 
         <div class="photo">
           <img src="assets/nico.jpg" alt="Nico Vazquez - cybbergram source">
-          <div class="photo__cap">FACE OBSCURED // ARCHIVAL</div>
+          <div class="photo__cap">CYBBERGRAM SOURCE // 142k likes</div>
         </div>
 
         <ul class="kvlist">
@@ -185,7 +185,6 @@ body{
           <li>Много моделей поведения выучено по медиа/брейндансам.</li>
         </ul>
       </section>
-    </section>
   </main>
 
   <script src="script.js"></script>
