--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -90,6 +90,7 @@ body{
       </section>
     </aside>
 
+    <section class="main">
       <section class="card" id="origin">
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
