--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -115,26 +115,22 @@ body{
 </section>
 
       <section class="card" id="family">
-  <div class="card__title">СЕМЕЙНЫЕ СВЯЗИ (ОГРАНИЧЕННЫЙ ДОСТУП)</div>
+  <div class="card__title">ПУБЛИЧНАЯ ДЕЯТЕЛЬНОСТЬ / КАРЬЕРА</div>
 
   <p>
-    Биологическая семья субъекта отсутствует.
-  </p>
+  Субъект известен как исполнитель и автор
+  оригинального музыкального материала.
+  Активно формирует публичный образ
+  и поддерживает высокий уровень медиа-присутствия.
+</p>
 
-  <p>
-    Подтверждено существование других идентичных экземпляров,
-    классифицированных как <span class="pill">SIBLING SUBJECTS</span>.
-  </p>
+<p class="muted">
+  Коммерческая активность включает стриминговые платформы
+  и подписочные сервисы.
+  Медиа-деятельность рассматривается
+  как следствие и усиление личного бренда.
+</p>
 
-  <p class="muted">
-    Известно минимум о двух женских экземплярах.
-    Их текущий статус, степень автономии и местоположение неизвестны.
-  </p>
-
-  <p class="muted">
-    Контакт между субъектами не зафиксирован.
-    Вероятность преднамеренного разделения — высокая.
-  </p>
 </section>
 
       <section class="card" id="relations">
