Revise medical card and add emotional control notes
Updated medical card details and added notes on emotional control and public image.

--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -161,17 +161,26 @@ body{
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
         <ul class="kvlist">
-          <li><span>Нейропрофиль</span><b class="warn">НЕСТАНДАРТНЫЙ</b></li>
-          <li><span>Псих. модель</span><b>Эмпатическая</b></li>
-          <li><span>Соц. адаптация</span><b>ФУНКЦИОНАЛЬНА</b></li>
-          <li><span>Коммуникация</span><b>ПРЯМОЛИНЕЙНАЯ</b></li>
-          <li><span>Дерматология</span><b class="warn">АНОМАЛИЯ / РИСК</b></li>
-          <li><span>Импланты</span><b class="redact" data-reveal="highly augmented">██████</b></li>
+          <li><span>Нейропрофиль</span><b class="warn">АКТИВНЫЙ / СТАБИЛЬНЫЙ</b></li>
+          <li><span>Псих. модель</span><b>КОМПЕНСАТОРНАЯ</b></li>
+          <li><span>Соц. адаптация</span><b class="warn">ВЫСОКАЯ</b></li>
+          <li><span>Коммуникация</span><b>ОТКРЫТАЯ</b></li>
+          <li><span>Эмоциональный контроль</span><b class="warn">ПОДАВЛЯЕМЫЙ</b></li>
+          <li><span>Импланты</span><b class="redact" data-reveal="stylized / performance-oriented">██████</b></li>
         </ul>
 
-        <p class="muted" style="margin-top:12px">
-          Примечание: маскировка лица бинтами может быть медицинской или поведенческой мерой.
-        </p>
+    <p class="muted" style="margin-top:12px">
+    Субъект демонстрирует устойчивую способность
+    поддерживать стабильный публичный образ
+    вне зависимости от внутреннего эмоционального состояния.
+  </p>
+
+          <p class="muted">
+    Восприятие окружающими преимущественно
+    как медиа-образа может оказывать
+    долговременное давление на личностную идентичность.
+  </p>
+        
       </section>
 
       <section class="card" id="notes">
