--- a/iren.html
+++ b/iren.html
@@ -66,7 +66,7 @@
 
         <div class="photo">
           <img src="assets/iren.jpg" alt="Iren - from datapool">
-          <div class="photo__cap">SOURCE : ARCHIVES DE LA SÉCURITÉ INTÉRIEURE</div>
+          <div class="photo__cap glitch-text">SOURCE : ARCHIVES DE LA SÉCURITÉ INTÉRIEURE</div>
         </div>
 
         <ul class="kvlist">
