Update HTML content with redacted information

--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -113,7 +113,7 @@ body{
   <span class="redact is-static">НЕДОСТУПНЫ</span>.
 </p>
 
-p>
+<p>
     Зафиксирована устойчивая связь
     с субъектом <b>MICHAEL GOOD</b>.
   </p>
@@ -232,11 +232,14 @@ p>
   </p>
 
   <p>
-    В настоящий момент субъект совместно
-    с другими членами группы
-    задействован в охране подземного объекта,
-    расположенного под заведением.
-  </p>
+  В настоящий момент субъект совместно
+  с другими членами группы
+  задействован в охране
+  <span class="redact is-dynamic" data-redact="COORDINATES">██████</span>,
+  расположенного
+  <span class="redact is-dynamic" data-redact="LOCATION">██████</span>.
+</p>
+
 
 </section>
 
