--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -115,9 +115,41 @@ body{
 
 <p>
     Зафиксирована устойчивая связь
-    с субъектом <b>MICHAEL GOOD</b>.
+    с субъектом <b>Майкл Гуд</b>.
   </p>
 
+<p>
+    В ходе анализа доступных данных
+    установлено имя матери субъекта —
+    <b>АМАНДА</b>.
+  </p>
+
+  <p class="muted">
+    Аффилиация: кочевнические формирования.<br>
+    Дополнительные сведения о статусе,
+    местоположении и характере связи
+    <span class="redact is-static">НЕДОСТУПНЫ</span>.
+  </p>
+
+  <p>
+    Зафиксировано устойчивое знакомство
+    субъекта с женщиной по имени
+    <b>АГНЕСС</b>.
+  </p>
+
+  <p class="muted">
+    Характер и происхождение связи
+    не установлены.
+    Признаков прямой аффилиации
+    или текущей зависимости не выявлено.
+  </p>
+
+  <p class="muted">
+    Взаимное знание подтверждено.
+    Детали взаимодействия
+    ограничены.
+  </p>
+        
   <p class="muted">
     В прошлом — совместная деятельность
     в составе одной группы.
@@ -271,9 +303,12 @@ body{
       <section class="card" id="notes">
         <div class="card__title">ПОЛЕВЫЕ ЗАМЕТКИ</div>
         <ul class="list">
-          <li>.....</li>
-          <li>.....</li>
-          <li>.....</li>
+<i class="warn">
+  Потенциальный риск:
+  длительное подавление
+  личных переживаний
+  в пользу поддержания образа.
+</i>
         </ul>
       </section>
   </main>
