Update subject name from English to Russian

--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -184,7 +184,7 @@
 
   <p>
     Зафиксирована устойчивая связь
-    с субъектом <b>WYATT MERCER</b>,
+    с субъектом <b>Уайат Мерсер</b>,
     аффилированным с корпорацией <b>METACORP</b>.
   </p>
 
