Fix interaction description in daniel-armet.html

--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -189,7 +189,7 @@
   </p>
 
   <p class="muted">
-    Характер взаимодействия —
+    Характер взаимодействия -
     неформальный.
     Основан на длительном
     профессиональном и личном контакте.
