--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -120,8 +120,8 @@ body{
 
 <p>
     В ходе анализа доступных данных
-    установлено имя матери субъекта —
-    <b>АМАНДА</b>.
+    установлено имя матери субъекта -
+    <b>Аманда</b>.
   </p>
 
   <p class="muted">
@@ -134,7 +134,7 @@ body{
   <p>
     Зафиксировано устойчивое знакомство
     субъекта с женщиной по имени
-    <b>АГНЕСС</b>.
+    <b>Агнесс</b>.
   </p>
 
   <p class="muted">
@@ -151,7 +151,7 @@ body{
   </p>
         
   <p class="muted">
-    В прошлом — совместная деятельность
+    В прошлом - совместная деятельность
     в составе одной группы.
     Контакт был временно утрачен
     по неустановленным причинам,
