Fix formatting of age statement in nico-vasquez.html

--- a/nico-vasquez.html
+++ b/nico-vasquez.html
@@ -97,7 +97,7 @@ body{
   <p>
   Субъект имеет подтверждённое натуральное происхождение.
   Точная дата рождения не установлена.
-  Предполагаемый возраст — <b>около 20 лет</b>.
+  Предполагаемый возраст - <b>около 20 лет</b>.
 </p>
 
 <p>
