--- a/iren.html
+++ b/iren.html
@@ -73,15 +73,14 @@
           <li><span>Имя</span><b>Ирен Виардо</b></li>
           <li><span>Роль</span><b>Нетраннер</b></li>
           <li><span>Ранг в сети</span><b class="warn">8</b></li>
-          <li><span>Происхождение</span><b>Франция</b></li>
+          <li><span>Происхождение</span><b>Франция (EEC)</b></li>
           <li><span>Статус</span><b>ACTIVE</b></li>
         </ul>
 
         <div class="tags">
           <span class="tag">NET</span>
-          <span class="tag">AGENT</span>
-          <span class="tag">NOMAD-AFFILIATED</span>
-          <span class="tag">CLONE</span>
+          <span class="tag">MILITECH</span>
+          <span class="tag">CYBER-PLAGUE</span>
         </div>
 
         <div class="micro mono">
@@ -114,22 +113,28 @@
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
   <p>
-    Субъект с высокой вероятностью является
-    искусственно выращенным клоном,
-    созданным в рамках неизвестной программы
-    с чётко заданной операционной целью.
+    Субъект родом из Франции (EEC).
+    В возрасте <b>18 лет</b> самостоятельно
+    прибыла в Night City.
+  </p>
+
+  <p>
+    На протяжении последующих
+    <b>≈10 лет</b> проживала на территории города,
+    проходя обучение и работая
+    в структуре <b>MILITECH</b>.
+  </p>
+
+  <p class="warn">
+    Впоследствии субъект
+    самовольно покинула корпорацию
+    и скрывалась от преследования.
   </p>
 
   <p class="muted">
-    Первоначально предполагалось, что субъект предназначен
-    для <span class="warn"><s>краткосрочной эксплуатации</s></span>
-    <span class="warn"><s>утилизации после выполнения задачи</s></span>
-    ограниченного цикла активного применения.
-  </p>
-
-  <p class="muted">
-    Данные предположения официально не подтверждены.
-    Исходная документация отсутствует.
+    Период укрытия проходил
+    при содействии банды
+    <b>ЖИВОТНЫЕ</b>.
   </p>
 </section>
 
@@ -137,22 +142,7 @@
   <div class="card__title">СЕМЕЙНЫЕ СВЯЗИ (ОГРАНИЧЕННЫЙ ДОСТУП)</div>
 
   <p>
-    Биологическая семья субъекта отсутствует.
-  </p>
-
-  <p>
-    Подтверждено существование других идентичных экземпляров,
-    классифицированных как <span class="pill">SIBLING SUBJECTS</span>.
-  </p>
-
-  <p class="muted">
-    Известно минимум о двух женских экземплярах.
-    Их текущий статус, степень автономии и местоположение неизвестны.
-  </p>
-
-  <p class="muted">
-    Контакт между субъектами не зафиксирован.
-    Вероятность преднамеренного разделения — высокая.
+    Семейные свзяи - неизвестны.
   </p>
 </section>
 
