--- a/iren.html
+++ b/iren.html
@@ -90,25 +90,6 @@
       </section>
     </aside>
 
-    <section class="main">
-      <section class="card" id="objective">
-        <div class="card__title">ИНФОРМАЦИЯ</div>
-
-        <p>
-          Субъект является
-          искусственно выращенным клоном,
-          созданным в рамках неизвестной программы.<br>
-          Данные предположения официально не подтверждены.
-          Исходная документация отсутствует.
-        </p>
-
-        <p>
-          Предыстория до активации: <span class="redact is-static">НЕДОСТУПНО</span>.
-          Возраст актива: <b>~6 лет</b>.
-        </p>
-
-      </section>
-
       <section class="card" id="origin">
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
@@ -174,27 +155,128 @@
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
         <ul class="kvlist">
-          <li><span>Нейропрофиль</span><b class="warn">НЕСТАНДАРТНЫЙ</b></li>
-          <li><span>Псих. модель</span><b>Эмпатическая</b></li>
-          <li><span>Соц. адаптация</span><b>ФУНКЦИОНАЛЬНА</b></li>
-          <li><span>Коммуникация</span><b>ПРЯМОЛИНЕЙНАЯ</b></li>
-          <li><span>Дерматология</span><b class="warn">АНОМАЛИЯ / РИСК</b></li>
-          <li><span>Импланты</span><b class="redact" data-reveal="highly augmented">██████</b></li>
+          <li><span>Нейропрофиль</span><b class="warn">НЕСТАБИЛЬНЫЙ</b></li>
+          <li><span>Псих. модель</span><b>ИМПУЛЬСИВНАЯ</b></li>
+          <li><span>Соц. адаптация</span><b>ОГРАНИЧЕННАЯ</b></li>
+          <li><span>Контроль импульсов</span><b class="warn">НИЗКИЙ</b></li>
+          <li><span>Либидо</span><b class="warn">ПОВЫШЕННОЕ</b></li>
+          <li><span>Импланты</span><b class="redact is-static">██████</b></li>
         </ul>
 
-        <p class="muted" style="margin-top:12px">
-          Примечание: маскировка лица бинтами может быть медицинской или поведенческой мерой.
-        </p>
+          <p class="muted" style="margin-top:12px">
+    Зафиксированы эпизоды злоупотребления алкоголем,
+    используемого как механизм подавления
+    тревоги и когнитивного перенапряжения.
+  </p>
+
+  <p class="muted">
+    Поведение субъекта характеризуется
+    резкими решениями и склонностью
+    к действию без полной оценки последствий.
+  </p>
+
+  <p class="warn glitch-text">
+    Наблюдается выраженное стремление
+    к искуплению вины, связанной
+    с созданием и последствиями ИСКИНА.
+  </p>
+
+  <p class="muted">
+    Мотивация к «исправлению ошибок»
+    может служить как фактором стабилизации,
+    так и источником повторной эскалации риска.
+  </p>
       </section>
 
-      <section class="card" id="notes">
-        <div class="card__title">ПОЛЕВЫЕ ЗАМЕТКИ</div>
-        <ul class="list">
-          <li>Друзей заводит легко, внимателен к людям.</li>
-          <li>Иногда не считывает «человеческие» социальные правила и говорит слишком прямо.</li>
-          <li>Много моделей поведения выучено по медиа/брейндансам.</li>
-        </ul>
-      </section>
+<section class="card" id="incident glitch-text">
+  <div class="card__title">КРИТИЧЕСКИЙ ИНЦИДЕНТ</div>
+
+  <p class="warn glitch-text">
+    Субъект признана причастной
+    к созданию и распространению
+    высокоагрессивного цифрового патогена,
+    классифицированного как <b>ИСКИН</b>.
+  </p>
+
+  <p>
+    ИСКИН был разработан в составе
+    группировки нетраннеров
+    <b>LOSTART</b>,
+    действовавшей на территории
+    Night City.
+  </p>
+
+  <p class="muted glitch-text">
+    Группировка позиционировала себя
+    как объединение, занимающееся
+    сбором и анализом творческой
+    цифровой деятельности
+    (музыка, визуальные образы, медиа).
+  </p>
+
+  <p class="warn glitch-text">
+    Фактическое применение ИСКИНА
+    привело к возникновению
+    так называемой <b>«КИБЕР-ЧУМЫ»</b>,
+    охватившей район <b>PACIFICA</b>.
+  </p>
+
+  <p>
+    Зафиксированы множественные
+    летальные исходы среди лиц
+    с активными имплантами.
+  </p>
+
+  <p class="muted glitch-text">
+    Вся группировка LOSTART
+    была уничтожена
+    в ходе последующих событий.
+  </p>
+
+  <p>
+    Один из участников выжил
+    и в настоящее время
+    аффилирован с группировкой
+    <b>ИНКВИЗИТОРОВ</b>.
+  </p>
+
+  <p class="warn glitch-text">
+    Статус выжившего:
+    <b>ОПАСНЫЙ</b>.
+  </p>
+</section>
+
+    <section class="card" id="clinic-op">
+  <div class="card__title">СОВМЕСТНАЯ ОПЕРАЦИЯ</div>
+
+  <p>
+    Совместно с представителем
+    группировки <b>ИНКВИЗИТОРОВ</b>
+    и субъектом <b>ELLIS</b>
+    проведена операция
+    по поиску заражённого тела
+    в медицинском учреждении.
+  </p>
+
+  <p>
+    В ходе операции был обнаружен
+    носитель фрагмента кода ИСКИНА.
+  </p>
+
+  <p class="muted">
+    Фрагмент кода извлечён,
+    изолирован и помещён
+    в защищённый контейнер.
+  </p>
+
+  <p class="warn">
+    Статус угрозы:
+    локально сдержана.
+    Полная нейтрализация
+    <span class="redact is-static">НЕ ПОДТВЕРЖДЕНА</span>.
+  </p>
+</section>
+
     </section>
   </main>
 
