--- a/iren.html
+++ b/iren.html
@@ -155,7 +155,7 @@
   <p class="warn glitch-text">
     Наблюдается выраженное стремление
     к искуплению вины, связанной
-    с созданием и последствиями ИСКИНА.
+    с созданием и последствиями <b class="warn glow">ИСКИНА</b>.
   </p>
 
   <p class="muted">
@@ -172,11 +172,11 @@
     Субъект признана причастной
     к созданию и распространению
     высокоагрессивного цифрового патогена,
-    классифицированного как <b>ИСКИН</b>.
+    классифицированного как <b class="warn glow">ИСКИН</b>.
   </p>
 
   <p>
-    ИСКИН был разработан в составе
+    <b class="warn glow">ИСКИН</b> был разработан в составе
     группировки нетраннеров
     <b>LOSTART</b>,
     действовавшей на территории
@@ -192,10 +192,11 @@
   </p>
 
   <p class="warn glitch-text">
-    Фактическое применение ИСКИНА
+    Фактическое применение <b class="warn glow">ИСКИНА</b>
+
     привело к возникновению
-    так называемой <b>«КИБЕР-ЧУМЫ»</b>,
-    охватившей район <b>PACIFICA</b>.
+    так называемой <b>«"КИБЕР-ЧУМЫ"</b>,
+    охватившей район <b>Пасифики</b>.
   </p>
 
   <p>
@@ -252,8 +253,6 @@
     Полная нейтрализация
     <span class="redact is-static">НЕ ПОДТВЕРЖДЕНА</span>.
   </p>
-</section>
-</section>
     </section>
   </main>
 
