--- a/iren.html
+++ b/iren.html
@@ -127,6 +127,35 @@
   </p>
 </section>
 
+    <section class="card" id="relations-add">
+  <div class="card__title">СОЦИАЛЬНЫЕ СВЯЗИ</div>
+
+  <p>
+    Зафиксирована устойчивая дружеская связь
+    с членом банды <b>Животные</b>
+    по прозвищу <b>«Дикобраз»</b>.
+  </p>
+
+  <p class="muted">
+    Связь сформировалась в период
+    сокрытия субъекта после бегства
+    из корпорации.
+    Характер взаимодействия -
+    защитный и доверительный.
+  </p>
+
+  <p>
+    Также подтверждено взаимодействие
+    и дружественный контакт
+    с субъектом <b>Эллис Вейл</b>.
+  </p>
+
+  <p class="muted">
+    Совместное участие в операциях,
+    включая инциденты повышенного риска,
+    способствовало формированию
+    взаимного доверия.
+  </p>
       
       <section class="card" id="medical">
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
