--- a/iren.html
+++ b/iren.html
@@ -156,12 +156,13 @@
     способствовало формированию
     взаимного доверия.
   </p>
-      
+      </section>
+
       <section class="card" id="medical">
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
         <ul class="kvlist">
-          <li><span>Нейропрофиль</span><b class="warn">НЕСТАБИЛЬНЫЙ</b></li>
+          <li><span>Нейропрофиль</span><b class="warn glitch-text">НЕСТАБИЛЬНЫЙ</b></li>
           <li><span>Псих. модель</span><b>ИМПУЛЬСИВНАЯ</b></li>
           <li><span>Соц. адаптация</span><b>ОГРАНИЧЕННАЯ</b></li>
           <li><span>Контроль импульсов</span><b class="warn">НИЗКИЙ</b></li>
@@ -194,7 +195,7 @@
   </p>
       </section>
 
-<section class="card" id="incident glitch-text">
+<section class="card glitch-text" id="incident">
   <div class="card__title">КРИТИЧЕСКИЙ ИНЦИДЕНТ</div>
 
   <p class="warn glitch-text">
@@ -270,13 +271,13 @@
     носитель фрагмента кода ИСКИНА.
   </p>
 
-  <p class="muted">
+  <p class="muted glitch-text">
     Фрагмент кода извлечён,
     изолирован и помещён
     в защищённый контейнер.
   </p>
 
-  <p class="warn">
+  <p class="warn glitch-text">
     Статус угрозы:
     локально сдержана.
     Полная нейтрализация
