--- a/iren.html
+++ b/iren.html
@@ -196,8 +196,8 @@
   </p>
       </section>
 
-<section class="card glitch-text" id="incident">
-  <div class="card__title">КРИТИЧЕСКИЙ ИНЦИДЕНТ</div>
+<section class="card" id="incident">
+  <div class="card__title glitch-text">КРИТИЧЕСКИЙ ИНЦИДЕНТ</div>
 
   <p class="warn glitch-text">
     Субъект признана причастной
