--- a/iren.html
+++ b/iren.html
@@ -90,7 +90,8 @@
         </div>
       </section>
     </aside>
-
+<section class="content">
+    
       <section class="card" id="origin">
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
@@ -285,6 +286,7 @@
     <span class="redact is-static">НЕ ПОДТВЕРЖДЕНА</span>.
   </p>
     </section>
+  </section>
   </main>
 
   <script src="script.js"></script>
